ace (5.7.7-3) unstable; urgency=low
  [ Marek Brudka ]
  * Configuration file for KFreeBSD created. Closes: #591586.
  * Restored pkgconfig files. Closes: #591610.

  [ Thomas Girard ]
  * Disable -fvisibility=hidden on armel since it does not seem to work on
    that platform. Closes: #593225.

 -- Thomas Girard <thomas.g.girard@free.fr>  Tue, 07 Sep 2010 20:04:20 +0200

ace (5.7.7-2) unstable; urgency=low

  * Rebuild with sid tk-dev build-dependency. Closes: #590512.

 -- Thomas Girard <thomas.g.girard@free.fr>  Mon, 02 Aug 2010 23:49:01 +0200

ace (5.7.7-1) unstable; urgency=low

  [ Thomas Girard ]
  * Add Marek to Uploaders: field.
  * Remove dependencies on autotools; these are no longer needed now that we
    have agreed to move back to the traditional compilation method.
  * Add bzip2 and lzo ZIOP implementation.
  * New patch: 20-versioned_libs.dpatch, to generate libraries with names
    following libACE-5.7.7.so pattern instead of libACE.so.5.7.7.
  * Rename binaries and packages to follow what is used in RPMs.
  * Move $ACE_ROOT to /usr/lib/ace.

  [ Marek Brudka ]
  * New upstream release:
    o add libACE_gperf, libACE_ETCL and libACE_Monitor_Control to libace
    o add headers and libraries for Monitor, ZIOP, ETCL to libtao package
    o renamed gperf-ace to ace_gperf to follow the upstream convention
    o renamed utilities (ns{add,del,list} to tao_ns{add,del,list}) in tao-utils
      to follow the upstream changes
  * Change compilation back to traditional ACE+TAO build method:
    o adapt existing Debian build mechanism
    o remove patches no longer needed because of this switch
    o use MPC generated makefiles
    o install build result using MPC/prj_install.pl and .ins files
    o temporarily excluded logWalker from build
  * New patch: 10-fix-prj-install to work-around a problem installing files
  * Added PerlACE to mpc-ace. Closes: #522557
  * Created patch to reduce the size of doxygen doc. Closes: #562164