@@ -1,2 +1,4 @@
 ACE_wrappers/TAO/utils/nslist/README.nslist
 ACE_wrappers/TAO/utils/catior/README.catior
+ACE_wrappers/TAO/utils/catior/test
+
