@@ -1,0 +1,4 @@
+debian/tao_catior.1
+debian/tao_nslist.1
+debian/tao_nsadd.1
+debian/tao_nsdel.1
