@@ -2,6 +2,7 @@ ace (5.7.7-3) unstable; urgency=low
   [ Marek Brudka ]
   * Configuration file for KFreeBSD created. Closes: #591586.
   * Restored pkgconfig files. Closes: #591610.
+  * Provided manpages for tao_catior, tao_nslist, tao_nsdel, tao_nsadd.
 
   [ Thomas Girard ]
   * Disable -fvisibility=hidden on armel since it does not seem to work on
